tests/neg/i3736b.scala
import foo.dynamics

class Foo() extends Dynamic // error: extension of type scala.Dynamic needs to be enabled

package foo {
  class dynamics
}
